Fixed Auction & Auction Repository to handle some exceptions